[project]
name = "repl-nix-logocraftpro"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.0",
    "openai>=1.57.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]
